<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@color/white">

    <com.zxinsight.MWImageView
        android:id="@+id/id_list_img"
        android:padding="@dimen/img_margin"
        android:layout_centerVertical="true"
        android:layout_width="120dp"
        android:layout_height="120dp" />

    <TextView
        android:id="@+id/id_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nipple_title"
        android:lines="1"
        android:layout_marginRight="@dimen/img_margin"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:ellipsize="end"
        android:textColor="@color/black"
        android:layout_toRightOf="@id/id_list_img" />
    <TextView
        android:id="@+id/id_list_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_white"
        android:layout_marginRight="@dimen/img_margin"
        android:paddingTop="5dp"
        android:textColor="@color/gray_bc_bg_color"
        android:textSize="12sp"
        android:maxLines="4"
        android:ellipsize="end"
        android:layout_below="@id/id_list_title"
        android:layout_alignLeft="@id/id_list_title"/>

    <TextView
        android:id="@+id/id_list_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_marginRight="@dimen/img_margin"
        android:paddingBottom="5dp"
        android:textColor="@color/red_dark_color"
        android:textSize="16sp"
        android:maxLines="4"
        android:ellipsize="end"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@id/id_list_title"/>
</RelativeLayout>