<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background_tab_pressed"
            app:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/shop_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_layout"
        android:background="@drawable/shop_detail" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/shop_detail"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/dark_gray" />

    <TextView
        android:id="@+id/nipple_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/nipple_title" />

    <TextView
        android:id="@+id/nipple_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nipple_title"
        android:textColor="@color/red_dark_color"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:text="@string/nipple_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/button_blue"
            android:layout_weight="1"
            android:text="@string/price"
            android:textSize="24sp"
            android:textColor="@color/white"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/click_to_buy"
            android:background="@drawable/btn_red_pressed"
            android:layout_weight="2"
            android:layout_marginLeft="1dp"
            android:text="@string/click_to_buy"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
    </LinearLayout>


</RelativeLayout>