<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/root"
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/login_bg"
                    android:orientation="vertical">

        <ImageView
            android:id="@+id/login_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="73dp"
            android:background="@drawable/login_icon"/>

        <EditText
            android:id="@+id/username"
            style="@style/LoginEdit"
            android:layout_below="@+id/login_icon"
            android:layout_marginTop="80dp"
            android:drawableLeft="@drawable/login_username_icon"
            android:drawablePadding="10dp"
            android:hint="@string/login_username_hint"
            android:textColor="@color/white"
            android:lines="1"
            android:textColorHint="@color/login_edit_hint"/>

        <EditText
            android:id="@+id/password"
            style="@style/LoginEdit"
            android:layout_below="@+id/username"
            android:layout_marginTop="17dp"
            android:drawableLeft="@drawable/login_password_normal"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:hint="@string/login_password_hint"
            android:lines="1"
            android:textColorHint="@color/login_edit_hint"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30.5dp"
            android:textColor="@color/white"
            android:background="@drawable/selector_login_edit"
            android:gravity="center"
            android:text="@string/login"/>

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"
            android:background="@drawable/login_logo"/>

    </RelativeLayout>

    <View
        android:id="@+id/coverLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/black"
        />
</FrameLayout>